# Trassh

./: README.md
trash_bot/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  package.xml  setup.py
trash_bot/config/: nav2_params.yaml  slam.rviz  slam_params.yaml
trash_bot/firmware/: README.md  platformio.ini
trash_bot/firmware/src/: main.cpp
trash_bot/launch/: bringup_launch.py  robot_state_publisher.launch.py  slam_launch.py
trash_bot/maps/: room_map.yaml
trash_bot/trash_bot/: __init__.py  gesture_control.py  mission_controller.py  serial_bridge.py
trash_bot/urdf/: trash_bot.sdf  trash_bot.urdf.xacro
